--- a/Labyrinth/Labyrinth/bin/Labyrinth.dll.config
+++ b/Labyrinth/Labyrinth/bin/Labyrinth.dll.config
@@ -93,4 +93,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".tmx" mimeType="application/tmx" />
+    </staticContent>
+  </system.webServer>
 </configuration>
