--- a/Labyrinth/Labyrinth/bin/Labyrinth.dll.config
+++ b/Labyrinth/Labyrinth/bin/Labyrinth.dll.config
@@ -111,6 +111,7 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".tmx" mimeType="application/tmx" />
+      <mimeMap fileExtension=".fnt" mimeType="application/fnt" />
     </staticContent>
   </system.webServer>
 <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd"><core>
