+second map +collision +next level

--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -281,14 +281,19 @@
     <Content Include="Content\Game\data\fnt\PressStart2P.png" />
     <Content Include="Content\Game\data\img\area01_bkg0.png" />
     <Content Include="Content\Game\data\img\area01_bkg1.png" />
+    <Content Include="Content\Game\data\img\Blank_Sprite_Sheet_4_2_by_KnightYamato.png" />
+    <Content Include="Content\Game\data\img\forest.png" />
     <Content Include="Content\Game\data\img\gui\title_screen.png" />
     <Content Include="Content\Game\data\img\map\area01_level_tiles.png" />
     <Content Include="Content\Game\data\img\map\license.txt" />
     <Content Include="Content\Game\data\img\map\map1_level_tiles.png" />
+    <Content Include="Content\Game\data\img\map\map2_level_tiles.png" />
+    <Content Include="Content\Game\data\img\meta_collide.png" />
     <Content Include="Content\Game\data\img\sprite\gripe_run_right.png" />
     <Content Include="Content\Game\data\img\sprite\spinning_coin_gold.png" />
     <Content Include="Content\Game\data\img\sprite\wheelie_right.png" />
     <Content Include="Content\Game\data\map\area01_bkg0.png" />
+    <Content Include="Content\Game\data\map\map1.js" />
     <Content Include="Content\Game\data\sfx\cling.mp3" />
     <Content Include="Content\Game\data\sfx\feelgood.mp3" />
     <Content Include="Content\Game\data\sfx\jump.mp3" />
@@ -8523,6 +8528,8 @@
     <Content Include="Content\Game\README.md" />
     <Content Include="App_Data\area01.tmx" />
     <Content Include="Content\Game\data\map\map1.tmx" />
+    <Content Include="Content\Game\data\map\map2.tmx" />
+    <Content Include="Content\Game\data\map\isometric.tmx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
