--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -288,6 +288,14 @@
     <Compile Include="Migrations\201707101216596_Sell.Designer.cs">
       <DependentUpon>201707101216596_Sell.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707110735197_Migrations.cs" />
+    <Compile Include="Migrations\201707110735197_Migrations.Designer.cs">
+      <DependentUpon>201707110735197_Migrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707110827094_Guid.cs" />
+    <Compile Include="Migrations\201707110827094_Guid.Designer.cs">
+      <DependentUpon>201707110827094_Guid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -8642,6 +8650,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707101216596_Sell.resx">
       <DependentUpon>201707101216596_Sell.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707110735197_Migrations.resx">
+      <DependentUpon>201707110735197_Migrations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707110827094_Guid.resx">
+      <DependentUpon>201707110827094_Guid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
