--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,20 @@
 /Labyrinth/Labyrinth/obj/Debug/Labyrinth.pdb
 /Labyrinth/Labyrinth/obj
 /Labyrinth/Labyrinth/bin
+/Labyrinth/Labyrinth/Migrations/201707041008346_InitialCreate.Designer.cs
+/Labyrinth/Labyrinth/Migrations/201707041008346_InitialCreate.cs
+/Labyrinth/Labyrinth/Migrations/201707041008346_InitialCreate.resx
+/Labyrinth/Labyrinth/Migrations/201707101144009_Player.Designer.cs
+/Labyrinth/Labyrinth/Migrations/201707101144009_Player.cs
+/Labyrinth/Labyrinth/Migrations/201707101144009_Player.resx
+/Labyrinth/Labyrinth/Migrations/201707101154281_Item.Designer.cs
+/Labyrinth/Labyrinth/Migrations/201707101154281_Item.cs
+/Labyrinth/Labyrinth/Migrations/201707101154281_Item.resx
+/Labyrinth/Labyrinth/Migrations/201707101209386_PlayerItem.Designer.cs
+/Labyrinth/Labyrinth/Migrations/201707101209386_PlayerItem.cs
+/Labyrinth/Labyrinth/Migrations/201707101209386_PlayerItem.resx
+/Labyrinth/Labyrinth/Migrations/201707101216596_Sell.Designer.cs
+/Labyrinth/Labyrinth/Migrations/201707101216596_Sell.cs
+/Labyrinth/Labyrinth/Migrations/201707101216596_Sell.resx
+*.cs
+*.resx
