--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -274,6 +274,10 @@
     <Compile Include="Migrations\201707111212561_initial.Designer.cs">
       <DependentUpon>201707111212561_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707130807081_ImageForItem.cs" />
+    <Compile Include="Migrations\201707130807081_ImageForItem.Designer.cs">
+      <DependentUpon>201707130807081_ImageForItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -8636,6 +8640,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707111212561_initial.resx">
       <DependentUpon>201707111212561_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707130807081_ImageForItem.resx">
+      <DependentUpon>201707130807081_ImageForItem.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
