"Put images to Items, Worked on Marketplace functionality and bugs, Implemented adding the score when the player dies"

--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -8620,6 +8620,7 @@
     <Content Include="Views\Market\Index.cshtml" />
     <Content Include="Views\Market\NoGold.cshtml" />
     <Content Include="Views\Market\SellItems.cshtml" />
+    <Content Include="Views\Game\YouDied.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
