--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -265,7 +265,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="ChatHub.cs" />
-    <Compile Include="Common\Class1.cs" />
     <Compile Include="Common\MessageDetail.cs" />
     <Compile Include="Common\UserDetail.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -283,9 +282,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Hubs\_ChatHub.cs" />
-    <Compile Include="Hubs\MessageDetail.cs" />
-    <Compile Include="Hubs\UserDetail.cs" />
     <Compile Include="IISHandler1.cs" />
     <Compile Include="Migrations\201707111212561_initial.cs" />
     <Compile Include="Migrations\201707111212561_initial.Designer.cs">
@@ -316,6 +312,7 @@
     <Content Include="Content\Game\data\img\area01_bkg1.png" />
     <Content Include="Content\Game\data\img\Blank_Sprite_Sheet_4_2_by_KnightYamato.png" />
     <Content Include="Content\Game\data\img\forest.png" />
+    <Content Include="Content\Game\data\img\gui\title1_screen.png" />
     <Content Include="Content\Game\data\img\gui\title_screen.png" />
     <Content Include="Content\Game\data\img\map\area01_level_tiles.png" />
     <Content Include="Content\Game\data\img\map\license.txt" />
