--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -303,6 +303,7 @@
     <Content Include=".gitignore" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\dashboard.css" />
     <Content Include="Content\Game\.gitignore" />
     <Content Include="Content\Game\build\js\resources.js" />
     <Content Include="Content\Game\data\bgm\dst-inertexponent.mp3" />
