--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -279,6 +279,7 @@
     <Compile Include="Controllers\PlayerItemsController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
     <Compile Include="Controllers\SellsController.cs" />
+    <Compile Include="Facebook\FacebookBackChannelHandler.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -517,6 +518,7 @@
     <Content Include="Content\Game\README.md" />
     <Content Include="Images\notify.ogg" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\GoogleAuthentication.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
