--- a/Labyrinth/Labyrinth/packages.config
+++ b/Labyrinth/Labyrinth/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Facebook" version="6.4.0" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Core" version="1.5.0" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Msie" version="1.5.0" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.V8" version="1.5.2" targetFramework="net452" />
