--- a/Labyrinth/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth/Labyrinth.csproj
@@ -613,6 +613,7 @@
     <Content Include="Views\Game\YouDied.cshtml" />
     <Content Include="Views\Chat\PrivateChat.cshtml" />
     <Content Include="Views\Shared\Chat.cshtml" />
+    <Content Include="Views\Account\FacebookPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
