--- a/Labyrinth/Labyrinth/Web.config
+++ b/Labyrinth/Labyrinth/Web.config
@@ -11,7 +11,8 @@
 			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
 		<section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" /><section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=10.1.100.211;Initial Catalog=Labyrinth;Integrated Security=False;User id=sa;Password=parola123;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=10.1.100.211;Initial Catalog=Labyrinth;Integrated Security=False;User id=sa;Password=parola123;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=tcp:labyrinth.database.windows.net,1433;Initial Catalog=labyrinth;Persist Security Info=False;User ID=labyrinth;Password=NicolaeGuta123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Labyrinth-20170703023835.mdf;Initial Catalog=aspnet-Labyrinth-20170703023835;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
